added new colors

--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar>
     <img
       mat-card-image
+      color="accent"
       src="../assets/rmb-promo-logo.png"
       alt="RMB logo"
       class="tile-image"
