--- a/apps/login/src/app/remote-entry/entry.component.html
+++ b/apps/login/src/app/remote-entry/entry.component.html
@@ -56,7 +56,6 @@
                 autocomplete="off"
                 matInput
                 placeholder="Username"
-                formControlName="email"
                 required
               />
             </mat-form-field>
@@ -69,7 +68,6 @@
                 autocomplete="false"
                 matInput
                 placeholder="Password"
-                formControlName="password"
                 required
               />
             </mat-form-field>
@@ -78,7 +76,7 @@
             style="float: center"
             type="submit"
             mat-raised-button
-            color="accent"
+            color="primary"
           >
             LOGIN
           </button>
